crates/plotnik-tests/tests/macro_ui/fail/depth_unbounded.rs
plotnik::query! {
    "Q = (program)",
    grammar = "arborium-javascript",
    depth = unbounded,
}

fn main() {}
